--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'dashboard' %}">MAS</a>
+            <a class="navbar-brand" href="{% url 'accounts:dashboard' %}">MAS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,19 +33,30 @@
                 <ul class="navbar-nav me-auto">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+                            <a class="nav-link" href="{% url 'accounts:dashboard' %}">Dashboard</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'project_list' %}">Projects</a>
-                        </li>
-                        {% if user.is_staff %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'service_list' %}">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'service_log' %}">Service Logs</a>
-                        </li>
+                        
+                        {% if user.user_type == 'Admin' %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'project_list' %}">Projects</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'service_list' %}">Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'service_log' %}">Service Logs</a>
+                            </li>
                         {% endif %}
+                        
+                        {% if user.user_type == 'Vendor' %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'mas_sheets:mas_create' %}">Create MAS</a>
+                            </li>
+                        {% endif %}
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'mas_sheets:mas_list' %}">MAS List</a>
+                        </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
@@ -54,17 +65,17 @@
                             <span class="nav-link">Welcome, {{ user.get_full_name|default:user.username }}</span>
                         </li>
                         <li class="nav-item">
-                            <form method="post" action="{% url 'logout' %}" class="d-inline">
+                            <form method="post" action="{% url 'accounts:logout' %}" class="d-inline">
                                 {% csrf_token %}
                                 <button type="submit" class="btn nav-link">Logout</button>
                             </form>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                            <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                            <a class="nav-link" href="{% url 'accounts:signup' %}">Sign Up</a>
                         </li>
                     {% endif %}
                 </ul>
