--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -11,7 +11,7 @@
             </div>
             <div class="card-body">
                 <p>You have been successfully logged out.</p>
-                <a href="{% url 'login' %}" class="btn btn-primary">Log In Again</a>
+                <a href="{% url 'accounts:login' %}" class="btn btn-primary">Log In Again</a>
             </div>
         </div>
     </div>
