--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -15,7 +15,7 @@
                     {% csrf_token %}
                     {{ form|crispy }}
                     <button type="submit" class="btn btn-primary">Login</button>
-                    <a href="{% url 'signup' %}" class="btn btn-link">Don't have an account? Sign up</a>
+                    <a href="{% url 'accounts:signup' %}" class="btn btn-link">Don't have an account? Sign up</a>
                 </form>
             </div>
         </div>
